[package]
name = "wx_dump_rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wx_dump_rs"
path = "src/main.rs"
required-features = ["default"]
[[bin]]
name = "wx_dump_rs_gui"
path = "src/main_gui.rs"
required-features = ["gui"]
[[bin]]
name = "find_key_for_4"
path = "src/find_key_for_4.rs"
required-features = ["default"]

[features]
default = ["shell"]
shell = ["windows", "futures"]
gui = [
    "iced",
    "iced_runtime",
    "iced_aw",
    "diesel/sqlite",
    "diesel/chrono",
    "chrono",
    "tokio",
    "windows/Win32_System_Com",
    "windows/Win32_UI_Shell",
    "silk-sys",
    "cpal",
    "plotters",
    "xml",
    "reqwest",
    "iced_gif",
    "jieba-rs",
    "rig-core",
]
dev = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "*", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
], optional = true }
anyhow = { version = "*", features = ["backtrace"] }
serde_json = "*"
serde = { version = "*", features = ["derive"]}
clap = { version = "*", features = ["derive"] }
base64 = "*"
dirs = "*"
pbkdf2 = { version = "*", features = ["hmac"] }
sha1 = "*"
sha2 = "*"
hmac = "*"
cbc = "*"
aes = "*"
byteorder = "*"
iced = { version = "*", features = [
    "tokio",
    "debug",
    "default",
    "qr_code",
    "image",
    "canvas",
    "system",
    "multi-window",
], optional = true }
iced_aw = { version = "*", features = [
    "date_picker",
    "icons",
], optional = true }
iced_runtime = { version = "*", optional = true }
tokio = { version = "*", features = ["sync"], optional = true }
futures = { version = "*", optional = true }
diesel = { version = "*", optional = true }
silk-sys = { path = "silk-sys", optional = true }
cpal = { version = "*", optional = true }
chrono = { version = "*", optional = true }
plotters = { version = "*", optional = true }
xml = { version = "*", optional = true }
reqwest = { version = "*", features = ["stream"], optional = true }
rig-core = { version = "*", features = ["derive"], optional = true }
iced_gif = { version = "*", path = "iced_gif", optional = true }
jieba-rs ={ version = "*", optional = true , features = ["textrank","tfidf"]}